# eppg-controller

./: .cursorrules  .gitignore  ALERT_SYSTEM_README.md  BLE_OTA_Research.md  CLAUDE.md  CMakeLists.txt  CPPLINT.cfg  ISSUES_FOUND_AND_FIXES.md  README.md  RELEASE_NOTES.md  SIMPLE_MONITOR_README.md  SP_THROTTLE_DEMO.ino  SP_Throttle_Controller.ino  THREAD_SAFETY_IMPLEMENTATION_SUMMARY.md  THREAD_SAFETY_PLAN.md  TODO-reliability.md  ble.ino  eppg-controller.ino  extra-data.ino  extra_script.py  merge-esp.py  partitions.csv  partitions_8MB_logging.csv  platformio.ini  power.ino  sdkconfig.OpenPPG-CESP32S3-CAN-SP140  sdkconfig.defaults  sp140.ino  test_ble_ota.cpp  utilities.ino
.claude/: settings.local.json
.devcontainer/: devcontainer.json  setup.sh
.gemini/: settings.json
.github/workflows/: config.yml  pr-labeler.yml
boards/: openppg_controller_nrf52840.json
diagnostics-logs/: diag-history.jsonl
docs/: blackbox-plan.md  blackbox-product.md
inc/: BLEOTAManager.h  SymbolMono18pt7b.h  config.h  custom_symbols.h  sans_reg10.h  sans_reg16.h  sans_reg7.h  structs.h  version.h
inc/fonts/: SymbolMono18pt7b.h  sans_bold14.h  sans_reg10.h  sans_reg12.h  sans_reg14.h  sans_reg16.h  sans_reg18.h  sans_semb14.h  sans_semb16.h  sans_semb18.h  sans_semb20.h  sans_semb22.h  sans_semb24.h  sans_semb26.h
inc/powerpack/: config.h  dronecan_param.h  esc_config.h  esc_flasher.h  param_table.h  qc_test.h
inc/sp140/: alert_display.h  alert_system.h  altimeter.h  ble.h  ble_ota_test.h  bms.h  bms_monitors.h  buzzer.h  can_bus.h  clamp_utils.h  config.h  crash_log.h  debug.h  device_settings.h  device_state.h  diagnostics.h  display.h  esc.h  esc_monitors.h  esp32s3-config.h  globals.h  glyphs.h  led.h  m0-config.h  mode.h  monitor_config.h  notification.h  rp2040-config.h  shared-config.h  simple_monitor.h  sp140-defs.h  structs.h  system_monitors.h  task_manager.h  telemetry_hub.h  throttle.h  utilities.h  vibration.h  vibration_drv2605.h  vibration_pwm.h
inc/x4/: config.h  structs.h
lib/: esc.cpp  esc.h
local_deps/: ANT-BMS-CAN  SINE-ESC-CAN
src/: BLEOTAManager.cpp  CMakeLists.txt
src/powerpack/: dronecan_param.cpp  esc_config.cpp  esc_flasher.cpp  fw_data.h  main.cpp  qc_test.cpp
src/rnrf52/: receiver.ino
src/sp140/: CMakeLists.txt  alert_display.cpp  alert_system.cpp  altimeter.cpp  ble.cpp  ble_ota_test.cpp  bms.cpp  bms_monitors.cpp  buzzer.cpp  can_bus.cpp  crash_log.cpp  debug.cpp  device_settings.cpp  diagnostics.cpp  display.cpp  esc.cpp  esc_monitors.cpp  esp32s3-config.cpp  extra-data.ino  fw_marker.cpp  globals.cpp  led.cpp  main.cpp  mode.cpp  notification.cpp  notification_platform.cpp  rp2040-config.cpp  simple_monitor.cpp  sp140-helpers.ino  sp140.ino  system_monitors.cpp  task_manager.cpp  telemetry_hub.cpp  throttle.cpp  utilities.cpp  utilities.ino  vibration.cpp  vibration_drv2605.cpp  vibration_pwm.cpp
src/x4/: extra-data.ino  utilities.ino  x4.ino
test/: battery.cpp  neopixel.cpp
test/native_stubs/: Arduino.h  BMS_CAN.h  SPI.h
test/screenshot_stubs/: Adafruit_ST7735.h  Arduino.h  BMS_CAN.h  SPI.h  (+2 more)
test/test_screenshots/: CMakeLists.txt  build_and_run.sh  emulator_display.cpp  emulator_display.h  emulator_stubs.cpp  test_screenshots.cpp  video_gen.cpp
tools/: usb_diag_logger.py
(+58 files in other folders)
